fix alignmenet of about page header in FF51+

--- a/chrome/skin/common/utils/about.css
+++ b/chrome/skin/common/utils/about.css
@@ -35,6 +35,12 @@ page[currentcategory="paneAbout"] #header-about {
 	margin: 0 26px 30px;
 }
 
+.header > vbox {
+	flex: 1 1 auto;
+	display: flex;
+	flex-direction: column;
+}
+
 #version label {
 	-moz-margin-start: 3px;
 	-moz-margin-end: 0;
